k8s/lab4-secret/web-deployment-cfgmap-secret.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ihapp-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: ihapp
    spec:
      containers:
        - name: ihapp
          image: antzario/ihapp
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      component: ihapp
