k8s/lab4-secret/web-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ihapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: web-service
               port:
                 number: 5000
